--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -18,13 +18,18 @@
             <h1>Welcome to your dashboard</h1>
             <p>Here's a summary of your progress:</p>
 
-            <div class="card-deck">
+            <div class="row">
                  {% for course in courses %}
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ course.course_name }}</h5>
-                        <p class="card-text">In Progress</p>
-                        <p class="card-text">Price: {{ course.price }}</p>
+                <div class="col-sm-5 m-2 p-2">
+                    <div class="card">
+                        <div class="card-body">
+                            {% if  course.website == 'udemy'%}
+                                <a href="https://udemy.com{{ course.course_url }}"><h5 class="card-title">{{ course.course_name }}</h5></a>
+                            {% else %}
+                                <a href="{{ course.course_url }}"><h5 class="card-title">{{ course.course_name }}</h5></a>
+                            {% endif %}
+                            <p class="card-text">{{ course.website | capfirst }}</p>
+                        </div>
                     </div>
                 </div>
                 {% endfor %}
@@ -32,6 +37,7 @@
         </div>
     </div>
 </div>
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
