--- a/dashboard/templates/dashboard/feedback/feedback.html
+++ b/dashboard/templates/dashboard/feedback/feedback.html
@@ -38,11 +38,11 @@
 
 
     <div class=container-feedback>
- <form method="POST" action="{% url 'dashboard:feedback' %}">
+ <form method="POST" action="{% url 'dashboard:feedback' pk=id %}">
         {% csrf_token %}
         <div class="form-group">
             <label for="id_name">Name:</label>
-            <input class="form-control" type="text" id="id_name" name="name">
+            <input class="form-control" type="text" id="id_name" name="name" value="{{ name }}">
         </div>
         <div class="form-group">
             <label for="id_email">Email:</label>
