--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -23,7 +23,15 @@
                 <div class="col-sm-5 m-2 p-2">
                     <div class="card">
                         <div class="card-body">
-                            <a href="{% url 'dashboard:feedback' pk=course.id %}"><h5 class="card-title">{{ course.course_name }}</h5></a>
+                            {% if user.is_authenticated %}
+                                <a href="{% url 'dashboard:feedback' pk=course.id %}"><h5 class="card-title">{{ course.course_name }}</h5></a>
+                            {% else %}
+                                {% if course.website == 'udemy' %}
+                                    <a href="https://udemy.com{{ course.course_url }}"><h5 class="card-title">{{ course.course_name }}</h5></a>
+                                {% else %}
+                                    <a href="{{course.course_url}}"><h5 class="card-title">{{ course.course_name }}</h5></a>
+                                {% endif %}
+                            {% endif %}
                             <p class="card-text">{{ course.website | capfirst }}</p>
                         </div>
                     </div>
