--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
+
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Learn Sphere</a>
+        <a class="navbar-brand" href="/">Learn Sphere</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -36,12 +37,46 @@
                     <a class="nav-link" href="feedback">Feedback</a>
                 </li>
             </ul>
+
             <form class="form-inline my-2 my-lg-0 ml-auto">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search for courses" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
+            <ul class="navbar-nav ms-auto">
+                &nbsp;
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user:profile' %}"> <i class="fa fa-user"></i> &nbsp; Profile </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user:logout' %}"> <i class="fa fa-sign-out"></i> &nbsp; Logout </a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user:register' %}"> Register </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user:login' %}"> Login </a>
+                    </li>
+                {% endif %}
+                &nbsp;
+            </ul>
         </div>
     </nav>
+
+
+    {% for message in messages %}
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+            <h6 id="message-timer" class="alert alert-success text-center">{{message}}</h6>
+        {% endif %}
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+            <h6 id="message-timer" class="alert alert-info text-center">{{message}}</h6>
+        {% endif %}
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+            <h6 id="message-timer" class="alert alert-danger text-center">{{message}}</h6>
+        {% endif %}
+    {% endfor %}
+
     <br>
 
     {% block content %}
