--- a/templates/base.html
+++ b/templates/base.html
@@ -46,17 +46,17 @@
                 &nbsp;
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user:profile' %}"> <i class="fa fa-user"></i> &nbsp; Profile </a>
+                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'profile' %}"> <i class="fa fa-user"></i> &nbsp; Profile </a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user:logout' %}"> <i class="fa fa-sign-out"></i> &nbsp; Logout </a>
+                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'logout' %}"> <i class="fa fa-sign-out"></i> &nbsp; Logout </a>
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user:register' %}"> Register </a>
+                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'register' %}"> Register </a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user:login' %}"> Login </a>
+                        <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'login' %}"> Login </a>
                     </li>
                 {% endif %}
                 &nbsp;
