Adds course details page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,3 +21,13 @@
     color: #fff;
     background-color: #6c757d;
 }
+
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
+}
