--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -24,7 +24,7 @@
                     <div class="card">
                         <div class="card-body">
                             {% if user.is_authenticated %}
-                                <a href="{% url 'dashboard:feedback' pk=course.id %}"><h5 class="card-title">{{ course.course_name }}</h5></a>
+                                <a href="{% url 'dashboard:course_detail' course_id=course.id %}"><h5 class="card-title">{{ course.course_name }}</h5></a>
                             {% else %}
                                 {% if course.website == 'udemy' %}
                                     <a href="https://udemy.com{{ course.course_url }}"><h5 class="card-title">{{ course.course_name }}</h5></a>
