--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,8 +34,8 @@
                 </li>
             </ul>
 
-            <form class="form-inline my-2 my-lg-0 ml-auto">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search for courses" aria-label="Search">
+            <form class="form-inline my-2 my-lg-0 mx-auto">
+                <input class="form-control search mr-sm-2" id="search" placeholder="Search for courses" >
             </form>
             <ul class="navbar-nav ms-auto">
                 &nbsp;
@@ -116,6 +115,18 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        $(document).ready(function() {
+            $("#search").keyup(function(event) {
+                if (event.keyCode == 13) {
+                    event.preventDefault();
+                    var searchQuery = $(this).val();
+                    window.location.href = "/search/" + searchQuery;
+                }
+            });
+        });        
+    </script>
 
 </body>
 </html>
