--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -42,8 +42,8 @@
             <div class="list-group">
                 <a href="{% url 'dashboard:dashboard' %}" class="list-group-item list-group-item-action active">Dashboard</a>
                 <a href="{% url 'dashboard:wishlist' %}" class="list-group-item list-group-item-action">My wishlist</a>
-                <a href="#" class="list-group-item list-group-item-action">Completed Courses</a>
-                <a href="#" class="list-group-item list-group-item-action">Account Settings</a>
+                <a href="#" disabled class="list-group-item list-group-item-action">Completed Courses</a>
+                <a href="#" disabled class="list-group-item list-group-item-action">Account Settings</a>
             </div>
         </div>
         {% csrf_token %}
@@ -120,15 +120,19 @@
                 </div>
                 <br>
                 <div class="bot-response">
-                    <span>I can help you with finding the right course for you or I can take your feedback for some course.</span>
+                    <span>I can help you with finding the right course for you.</span>
                 </div>
                 <br>
                 <br>
             </div>
             <div class="modal-footer">
-                <div class="input-group mb-3">
-                    <input type="text" id="message-field" class="form-control" placeholder="Type your message here" aria-label="Recipient's username" aria-describedby="send-button">
-                    <button class="btn btn-outline-secondary" type="button" id="send-button">Send</button>
+                <div class="input-group mb-2">
+                    <form id="chatForm" class="form-inline w-100 d-flex">
+                        <input type="text" id="message-field" class="form-control me-1" placeholder="Type your message here" aria-label="Recipient's username" aria-describedby="send-button">
+                        <button class="btn btn-outline-secondary" type="button" id="send-button">
+                            Send
+                        </button>
+                    </form>
                 </div>
                 <div class="text-center px-2">
                     <span>Powered by <a href="chat.openai.com">ChatGPT</a></span>
@@ -140,10 +144,26 @@
 
 <script>
     $(document).ready(function() {
-        $("#send-button").click(function() {
+        document.querySelector('#chatForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            let sendButton = document.querySelector('#send-button');
+            if (sendButton.innerHTML.includes('spinner')) {
+                return;
+            }
+            sendButton.innerHTML = `<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>`;
+            sendButton.setAttribute('disabled', 'true');
             var message = $("#message-field").val();
-            $("#message-field").val("");  // clear the input field
-            //console.log(message);
+            $("#message-field").val("");
+            sendMessage(message);
+        });
+        
+        document.querySelector('#send-button').addEventListener('click', function(e) {
+            e.preventDefault();
+            let sendButton = document.querySelector('#send-button');
+            sendButton.innerHTML = `<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>`;
+            sendButton.setAttribute('disabled', 'true');
+            var message = $("#message-field").val();
+            $("#message-field").val("");
             sendMessage(message);
         });
     });
@@ -158,9 +178,15 @@
     function addBotResponse(message) {
         $(".modal-body").append('<div class="bot-response"><span>' + message + '</span></div><br>');
     }
+    function scrollToBottom() {
+        const myModal = document.querySelector('.modal');
+        const modalBody = myModal.querySelector('.modal-body');
+        modalBody.scrollTop = modalBody.scrollHeight;
+    }
 
     function sendMessage(message) {
         addUserResponse(message);
+        scrollToBottom();
         fetch("{% url 'dashboard:chat' %}", {
             method: 'POST',
             headers: {
@@ -171,8 +197,6 @@
         })
         .then(response => response.json())
         .then(data => {
-            console.log('response for bot')
-            console.log(data)
             addBotTag();
             if (data.courses) {
                 response = 'Here are some courses that might interest you:<br><ul>';
@@ -186,9 +210,20 @@
             } else {
                 // Display the assistant's message in the chat box
                 addBotResponse(data.message);
-            }    
+            }
+            scrollToBottom();
+            let sendButton = document.querySelector('#send-button');
+            sendButton.innerHTML = `Send`;
+            sendButton.removeAttribute('disabled');
         })
-        .catch(error => console.log(error));
+        .catch(error => {
+            console.log(error);
+            addBotTag();
+            addBotResponse("Sorry, I didn't understand that. Please try again.");
+            let sendButton = document.querySelector('#send-button');
+            sendButton.innerHTML = `Send`;
+            sendButton.removeAttribute('disabled');
+        });
         
     }
 
