--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn btn-alert navbar-btn text-white" href="#">Categories</a>
+                    <a class="nav-link btn btn-alert navbar-btn text-white" href="{% url 'dashboard:categories' %}">Categories</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link btn btn-alert navbar-btn text-white" href="#">My Courses</a>
